# chronicle-keeper-world

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SIMPLIFICATION_OPPORTUNITIES.md  start-dev.sh  start.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml
backend/: .gitignore  PHASE2_SUMMARY.md  build_executable.py  fix_cudnn.sh  pyproject.toml  run.py  test_context_window.py  test_model_selection.py  test_refactoring.py  test_structured_output.py
backend/app/: __init__.py  logging_config.py  main.py  models.py  prompts.py
backend/app/services/: __init__.py  campaigns.py  context_window.py  export.py  sessions.py  summarization.py  transcribe.py  upload.py
backend/app/services/transcription/: __init__.py  base.py  formatting.py  insanely_fast_whisper_provider.py  mlx_audio_provider.py  onnx_asr_provider.py  whisperx_provider.py
backend/app/storage/: __init__.py  artifacts.py  campaigns.py  config.py  db.py
backend/archive_legacy/: CUDNN_FIX.md  GEMINI_SDK_MIGRATION.md  README.md  USAGE_EXAMPLES.md  run.py
backend/archive_legacy/src/: cudnn_init.py  prompts.py
backend/archive_legacy/src/audio/: __init__.py  extraction.py
backend/archive_legacy/src/llm/: __init__.py  base.py  ollama.py
backend/archive_legacy/src/storage/: __init__.py  config_manager.py  debug_manager.py  session_manager.py
backend/scripts/: migrate_artifacts.py  wipe_db.py
backend/src/: constants.py  context_window.py  main.py  models.py  prompts.py
backend/src/audio/: transcription.py
backend/src/llm/: base.py  gemini.py  ollama.py
backend/src/storage/: config_manager.py  debug_manager.py  manager.py  session_manager.py
crates/ck-core/: Cargo.toml
crates/ck-core/examples/: decode_smoke.rs  sync_smoke.rs  vad_smoke.rs
crates/ck-core/src/: atlas.rs  codex_import.rs  codex_update.rs  config.rs  db.rs  error.rs  export.rs  history.rs  index_watch.rs  lib.rs  models.rs  normalize.rs  paths.rs  prompts.rs  seed.rs  session_files.rs  session_search.rs  state.rs  summarize.rs  sync.rs  timeline.rs  transcript_format.rs  vault.rs  world_config.rs
crates/ck-core/src/agent/: attachments.rs  brief.rs  chats.rs  context.rs  memory.rs  mod.rs  page_syntax.md  skills.rs  tests.rs  tools.rs  web.rs
crates/ck-core/src/agent/skills_default/check-consistency/: SKILL.md
crates/ck-core/src/agent/skills_default/flesh-out-a-character/: SKILL.md
crates/ck-core/src/agent/skills_default/flesh-out-a-culture/: SKILL.md
crates/ck-core/src/agent/skills_default/flesh-out-a-place/: SKILL.md
crates/ck-core/src/agent/skills_default/foundry-bridge/: SKILL.md
crates/ck-core/src/agent/skills_default/skill-creator/: SKILL.md
crates/ck-core/src/foundry/: client.rs  mod.rs  read.rs  sync.rs  system.rs
crates/ck-core/src/http/: agent.rs  artifacts.rs  atlas.rs  campaigns.rs  codex.rs  codex_update.rs  foundry.rs  index.rs  llm.rs  migration.rs  mod.rs  prompts.rs  sessions.rs  transcribe.rs  upload.rs  vault.rs
crates/ck-core/src/llm/: agent.rs  mod.rs
crates/ck-core/src/store/: artifacts.rs  campaigns.rs  codex.rs  index.rs  migration.rs  mod.rs  prompts.rs  sessions.rs  tags.rs
crates/ck-core/src/transcription/: decode.rs  mod.rs  model.rs
docs/: ROADMAP.md  codex-phase3.md
docs/screenshots/: README.md
frontend/: app.css  app.js  index.html  styles.css  tokens.css
frontend/app/: actions.js  cm.js  commands.js  core.js  folderKinds.js  graph.js  keeperMemory.js  keeperPanel.js  main.js  modals.js  shell.js  ui.js
frontend/app/screens/: atlas.js  campaign.js  codex.js  codexEntry.js  codexUpdate.js  graph.js  keeper.js  library.js  migration.js  newSession.js  newWorld.js  page.js  palette.js  placeholder.js  search.js  session.js  sessions.js  settings.js  summarize.js  timeline.js
frontend/src/: main.ts  styles.css
scripts/: build-desktop.sh  keeper_tool_usage.py
site/: README.md  index.html
site/assets/: site.js  style.css
site/docs/: codex.html  editor.html  faq.html  getting-started.html  index.html  install.html  keeper.html  llm-setup.html  sync.html  troubleshooting.html  views.html  workflow.html  worlds.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  menu.rs
tasks/: desktop-app-bundling.md
