[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.12.2",
    "pyinstaller>=6.16.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
    "whisperx>=3.7.4",
    "ctranslate2>=4.6.0",
    "numpy==2.0.2",
    "ollama>=0.6.1",
    "google-genai>=1.55.0",
    "insanely-fast-whisper>=0.0.15",
    "mlx-audio[stt]>=0.2.10",
]
