[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.12.2",
    "pyinstaller>=6.16.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
    "numpy==2.0.2",
    "ollama>=0.6.1",
    "google-genai>=1.55.0",
    "mlx-audio[stt]>=0.3.1; sys_platform == 'darwin'",
    "onnx-asr[gpu,hub]; sys_platform == 'linux'",
    "onnx-asr[cpu,hub]; sys_platform == 'darwin' or sys_platform == 'win32'",
]
